--- a/src/pages/list/basic-list/style.less
+++ b/src/pages/list/basic-list/style.less
@@ -57,6 +57,7 @@
       font-size: @font-size-base;
       vertical-align: middle;
       > span {
+        color: black;
         line-height: 20px;
       }
       > p {
