--- a/src/pages/mywork/reception/style.less
+++ b/src/pages/mywork/reception/style.less
@@ -84,6 +84,7 @@
       color: @text-color-secondary;
       font-size: @font-size-base;
       vertical-align: middle;
+      text-align: right;
       > span {
         color: black;
         line-height: 20px;
