--- a/src/pages/dashboard/basic-list/style.less
+++ b/src/pages/dashboard/basic-list/style.less
@@ -67,8 +67,11 @@
       }
     }
   }
+  .extraContent{
+    text-align: center;
+  }
   .extraContentSearch {
-    width: 272px;
+    width: 500px;
     margin-left: 16px;
   }
 }
