--- a/src/pages/mywork/reception/style.less
+++ b/src/pages/mywork/reception/style.less
@@ -1,5 +1,38 @@
 @import '~antd/es/style/themes/default.less';
-@import './utils/utils.less';
+
+.textOverflow() {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  word-break: break-all;
+}
+
+// mixins for clearfix
+// ------------------------
+.clearfix() {
+  zoom: 1;
+  &::before,
+  &::after {
+    display: table;
+    content: ' ';
+  }
+  &::after {
+    clear: both;
+    height: 0;
+    font-size: 0;
+    visibility: hidden;
+  }
+}
+
+.activitiesList {
+  padding: 0 24px 8px 24px;
+  .username {
+    color: @text-color;
+  }
+  .event {
+    font-weight: normal;
+  }
+}
 
 .pageHeaderContent {
   display: flex;
@@ -29,116 +62,154 @@
   }
 }
 
-.standardList {
-  :global {
-    .ant-card-head {
-      border-bottom: none;
-    }
-    .ant-card-head-title {
-      padding: 24px 0;
-      line-height: 32px;
-    }
-    .ant-card-extra {
-      padding: 24px 0;
-    }
-    .ant-list-pagination {
-      margin-top: 24px;
-      text-align: right;
-    }
-    .ant-avatar-lg {
-      width: 48px;
-      height: 48px;
-      line-height: 48px;
-    }
-  }
-  .headerInfo {
+.extraContent {
+  .clearfix();
+
+  float: right;
+  white-space: nowrap;
+  .statItem {
     position: relative;
-    text-align: center;
-    & > span {
-      display: inline-block;
+    display: inline-block;
+    padding: 0 32px;
+    > p:first-child {
       margin-bottom: 4px;
       color: @text-color-secondary;
       font-size: @font-size-base;
       line-height: 22px;
     }
-    & > p {
+    > p {
       margin: 0;
       color: @heading-color;
-      font-size: 24px;
-      line-height: 32px;
+      font-size: 30px;
+      line-height: 38px;
+      > span {
+        color: @text-color-secondary;
+        font-size: 20px;
+      }
     }
-    & > em {
+    &::after {
       position: absolute;
-      top: 0;
+      top: 8px;
       right: 0;
       width: 1px;
-      height: 56px;
+      height: 40px;
       background-color: @border-color-split;
+      content: '';
+    }
+    &:last-child {
+      padding-right: 0;
+      &::after {
+        display: none;
+      }
     }
   }
-  .listContent {
-    font-size: 0;
-    .listContentItem {
-      display: inline-block;
-      margin-left: 40px;
-      color: @text-color-secondary;
+}
+
+.members {
+  a {
+    display: block;
+    height: 24px;
+    margin: 12px 0;
+    color: @text-color;
+    transition: all 0.3s;
+    .textOverflow();
+    .member {
+      margin-left: 12px;
       font-size: @font-size-base;
-      vertical-align: middle;
-      text-align: right;
-      > span {
-        color: black;
-        line-height: 20px;
-      }
-      > p {
-        margin-top: 4px;
-        margin-bottom: 0;
-        line-height: 22px;
-      }
+      line-height: 24px;
+      vertical-align: top;
     }
-  }
-  .extraContentSearch {
-    width: 272px;
-    margin-left: 16px;
-  }
-}
-
-@media screen and (max-width: @screen-xs) {
-  .standardList {
-    :global {
-      .ant-list-item-content {
-        display: block;
-        flex: none;
-        width: 100%;
-      }
-      .ant-list-item-action {
-        margin-left: 0;
-      }
-    }
-    .listContent {
-      margin-left: 0;
-      & > div {
-        margin-left: 0;
-      }
-    }
-    .listCard {
-      :global {
-        .ant-card-head-title {
-          overflow: visible;
-        }
-      }
+    &:hover {
+      color: @primary-color;
     }
   }
 }
 
-@media screen and (max-width: @screen-sm) {
-  .standardList {
-    .extraContentSearch {
-      width: 100%;
-      margin-left: 0;
+.projectList {
+  :global {
+    .ant-card-meta-description {
+      height: 44px;
+      overflow: hidden;
+      color: @text-color-secondary;
+      line-height: 22px;
     }
-    .headerInfo {
-      margin-bottom: 16px;
-      & > em {
+  }
+  .cardTitle {
+    font-size: 0;
+    a {
+      display: inline-block;
+      height: 24px;
+      margin-left: 12px;
+      color: @heading-color;
+      font-size: @font-size-base;
+      line-height: 24px;
+      vertical-align: top;
+      &:hover {
+        color: @primary-color;
+      }
+    }
+  }
+  .projectGrid {
+    width: 33.33%;
+  }
+  .projectItemContent {
+    display: flex;
+    height: 20px;
+    margin-top: 8px;
+    overflow: hidden;
+    font-size: 12px;
+    line-height: 20px;
+    .textOverflow();
+    a {
+      display: inline-block;
+      flex: 1 1 0;
+      color: @text-color-secondary;
+      .textOverflow();
+      &:hover {
+        color: @primary-color;
+      }
+    }
+    .datetime {
+      flex: 0 0 auto;
+      float: right;
+      color: @disabled-color;
+    }
+  }
+}
+
+.datetime {
+  color: @disabled-color;
+}
+
+@media screen and (max-width: @screen-xl) and (min-width: @screen-lg) {
+  .activeCard {
+    margin-bottom: 24px;
+  }
+  .members {
+    margin-bottom: 0;
+  }
+  .extraContent {
+    margin-left: -44px;
+    .statItem {
+      padding: 0 16px;
+    }
+  }
+}
+
+@media screen and (max-width: @screen-lg) {
+  .activeCard {
+    margin-bottom: 24px;
+  }
+  .members {
+    margin-bottom: 0;
+  }
+  .extraContent {
+    float: none;
+    margin-right: 0;
+    .statItem {
+      padding: 0 16px;
+      text-align: left;
+      &::after {
         display: none;
       }
     }
@@ -146,80 +217,34 @@
 }
 
 @media screen and (max-width: @screen-md) {
-  .standardList {
-    .listContent {
-      & > div {
-        display: block;
-      }
-      & > div:last-child {
-        top: 0;
-        width: 100%;
-      }
-    }
+  .extraContent {
+    margin-left: -16px;
   }
-  .listCard {
-    :global {
-      .ant-radio-group {
-        display: block;
-        margin-bottom: 8px;
-      }
+  .projectList {
+    .projectGrid {
+      width: 50%;
     }
   }
 }
 
-@media screen and (max-width: @screen-lg) and (min-width: @screen-md) {
-  .standardList {
-    .listContent {
-      & > div {
-        display: block;
-      }
-      & > div:last-child {
-        top: 0;
-        width: 100%;
-      }
+@media screen and (max-width: @screen-sm) {
+  .pageHeaderContent {
+    display: block;
+    .content {
+      margin-left: 0;
+    }
+  }
+  .extraContent {
+    .statItem {
+      float: none;
     }
   }
 }
 
-@media screen and (max-width: @screen-xl) {
-  .standardList {
-    .listContent {
-      & > div {
-        margin-left: 24px;
-      }
-      & > div:last-child {
-        top: 0;
-      }
+@media screen and (max-width: @screen-xs) {
+  .projectList {
+    .projectGrid {
+      width: 100%;
     }
-  }
-}
-
-@media screen and (max-width: 1400px) {
-  .standardList {
-    .listContent {
-      text-align: right;
-      & > div:last-child {
-        top: 0;
-      }
-    }
-  }
-}
-
-.standardListForm {
-  :global {
-    .ant-form-item {
-      margin-bottom: 12px;
-      &:last-child {
-        margin-bottom: 32px;
-        padding-top: 4px;
-      }
-    }
-  }
-}
-
-.formResult {
-  width: 100%;
-  [class^='title'] {
-    margin-bottom: 8px;
   }
 }
