--- a/src/pages/mywork/reception/recentcreate/style.less
+++ b/src/pages/mywork/reception/recentcreate/style.less
@@ -31,15 +31,17 @@
 
 .standardList {
   :global {
-    .ant-card-head {
-      border-bottom: none;
+    .ant-card-head {      
+      margin: 0;
+      font-size: 16px;
+      line-height: 20px;
     }
     .ant-card-head-title {
-      padding: 24px 0;
-      line-height: 32px;
+      padding: 16px 0;
+      line-height: 22px;
     }
     .ant-card-extra {
-      padding: 24px 0;
+      padding: 0;
     }
     .ant-list-pagination {
       margin-top: 24px;
