--- a/src/pages/mywork/warehouse/check/style.less
+++ b/src/pages/mywork/warehouse/check/style.less
@@ -33,12 +33,14 @@
 }
 .standardList {
   :global {
-    .ant-card-head {
-      border-bottom: none;
+    .ant-card-head {      
+      margin: 0;
+      font-size: 16px;
+      line-height: 20px;
     }
     .ant-card-head-title {
-      padding: 24px 0;
-      line-height: 32px;
+      padding: 16px 0;
+      line-height: 22px;
     }
     .ant-card-extra {
       padding: 24px 0;
