--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -56,9 +56,9 @@
 
 .title {
   position: relative;
-  top: 2px;
-  color: @heading-color;
-  font-weight: 600;
+  top: 0px;
+  color: black;
+  font-weight: 400;
   font-size: 33px;
   font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
