--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -15,6 +15,7 @@
   float: right;
   height: 100%;
   margin-left: auto;
+  margin-right: 5mm;
   overflow: hidden;
   .action {
     display: inline-block;
